<?xml version="1.1" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_imagem"
    tools:context=".MainActivity">


    <ToggleButton
        android:id="@+id/presetButton2"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#8A640F"
        android:stateListAnimator="@null"
        android:textColor="#ADFFFFFF"
        android:textOff="@string/graffiti"
        android:textOn="@string/graffiti_selected"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/presetButton"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ToggleButton
        android:id="@+id/presetButton4"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#8A640F"
        android:stateListAnimator="@null"
        android:textColor="#ADFFFFFF"
        android:textOff="@string/realistic_hd"
        android:textOn="@string/realistic_hd_selected"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/presetButton3"
        app:layout_constraintTop_toBottomOf="@+id/presetButton2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="327dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="14dp"
        android:text="@string/you_are_just_a_few_steps_away_from_making_something_like_this"
        android:textColor="#F8FFFFFF"
        android:textSize="7pt"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="318dp"
        android:layout_height="105dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#8A640F"
        android:text="@string/submit_your_theme_and_generate_a_image_just_make_sure_to_have_a_wi_fi_connection"
        android:textColor="#ADFFFFFF"
        android:textColorHighlight="#ADFFFFFF"
        android:textColorHint="#ADFFFFFF"
        android:textColorLink="#ADFFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/presetButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="383dp"
        android:layout_height="55dp"
        android:layout_marginTop="120dp"
        android:autofillHints=""
        android:hint="@string/enter_the_theme_of_your_image_here"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp" />

    <ToggleButton
        android:id="@+id/presetButton"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:backgroundTint="#8A640F"
        android:stateListAnimator="@null"
        android:textColor="#ADFFFFFF"
        android:textOff="@string/anime"
        android:textOn="@string/anime_selected"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/presetButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ToggleButton
        android:id="@+id/presetButton3"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#8A640F"
        android:stateListAnimator="@null"
        android:textColor="#ADFFFFFF"
        android:textOff="@string/_3d"
        android:textOn="@string/_3d_selected"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/presetButton4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presetButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="317dp"
        android:layout_height="151dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/foto_app" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_imagem"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="100dp"
            android:text="@string/welcome_to_vision_the_100_free_ai_image_generator"
            android:textColor="#F8FFFFFF"
            android:textSize="14pt"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="334dp"
            android:layout_height="136dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="410dp"
            android:backgroundTint="#8A640F"
            android:text=""
            android:textColor="#F8FFFFFF"
            android:textColorHighlight="#F8FFFFFF"
            android:textColorHint="#F8FFFFFF"
            android:textColorLink="#F8FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="600dp"
            android:text="@string/doubts"
            android:textColor="#F8FFFFFF"
            android:textSize="13dp" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/imageContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_imagem"
        android:visibility="gone"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="3dp"
        tools:visibility="gone">

        <TextView
            android:id="@+id/reportTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="100dp"
            android:text="Something offensive within the image's content? Press the button below to send us a report!"
            android:textColor="#F8FFFFFF"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="411dp"
            android:layout_height="77dp"
            android:layout_centerInParent="true"
            android:text=""
            android:textColor="#ADFFFFFF"
            android:textSize="18sp"
            android:visibility="gone"
            tools:ignore="MissingConstraints,RelativeOverlap"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="410dp"
            android:layout_height="410dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="140dp"
            android:contentDescription="@string/todo"
            android:scaleX="1"
            android:scaleY="1"
            android:visibility="visible"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="257dp"
            android:layout_height="239dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="225dp"
            android:indeterminateTint="#B6903D"
            android:visibility="gone"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="160dp"
            android:text="Like your image? Why dont you take a print of it?"
            android:textColor="#F8FFFFFF"
            android:textSize="18sp"
            android:visibility="gone"
            tools:visibility="gone" />

        <Button
            android:id="@+id/reportButton"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#C48E16"
            android:text="Report Image"
            android:visibility="gone"
            tools:visibility="gone" />

        <Button
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:backgroundTint="#C68F16"
            android:text="X"
            android:textColorLink="#8A640F"
            android:visibility="gone"
            app:iconTint="#8A640F"
            tools:ignore="HardcodedText"
            tools:visibility="gone" />

        <RelativeLayout
            android:id="@+id/reportScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_imagem"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone"
            tools:visibility="gone">

            <Button
                android:id="@+id/closeButton2"
                android:layout_width="56dp"
                android:layout_height="62dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:backgroundTint="#C68F16"
                android:text="X"
                android:textColorLink="#8A640F"
                android:textSize="20sp"
                android:visibility="visible"
                app:iconTint="#8A640F"
                tools:ignore="HardcodedText"
                tools:visibility="visible" />

            <Button
                android:id="@+id/copyEmailButton"
                android:layout_width="349dp"
                android:layout_height="64dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="450dp"
                android:backgroundTint="#C48E16"
                android:text="Copy email to clipboard"
                android:textSize="24sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <Button
                android:id="@+id/copyImagePromptButton"
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="520dp"
                android:backgroundTint="#C48E16"
                android:text="Copy your image prompt to clipboard"
                android:textSize="24sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/reportMessageTextView"
                android:layout_width="340dp"
                android:layout_height="278dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="160dp"
                android:text="If the contents of a prompt or a image are offensive and/or bothersome to you or anyone close to you, i urge you to click on the button below, in order to copy the app's professional email to your phone's clipboard, and to send it a email, containing the prompt given(also obtainable through clicking the button below the afromentioned button, to ease the process), the image made, and a optional short message to describe what is bothering you in the image or the prompt's contents"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="visible"
                tools:visibility="visible" />
        </RelativeLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

